--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,15 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'com.github.johnrengelman.shadow'
 
-    group = 'com.github.max1mde'
-    version = '2.2.1'
-
+    group = 'com.github.retrooper'
+    description = project.name
+    version = '2.2.1'//TODO UPDATE - ADD "-SNAPSHOT" if we are dealing with snapshot versions
     project.ext.nettyVersion = '4.1.72.Final'
     project.ext.adventureVersion = '4.16.0'
-    project.ext.adventureDependencies = ["net.kyori:adventure-api:${adventureVersion}",
-                                         "net.kyori:adventure-text-serializer-gson:${adventureVersion}",
-                                         "net.kyori:adventure-text-serializer-legacy:${adventureVersion}",
-                                         "net.kyori:adventure-nbt:${adventureVersion}"]
+    project.ext.adventureDependencies=["net.kyori:adventure-api:${adventureVersion}",
+                                       "net.kyori:adventure-text-serializer-gson:${adventureVersion}",
+                                       "net.kyori:adventure-text-serializer-legacy:${adventureVersion}",
+                                       "net.kyori:adventure-nbt:${adventureVersion}"]
 
     java.sourceCompatibility = JavaVersion.VERSION_17
     java.targetCompatibility = JavaVersion.VERSION_1_8
@@ -32,7 +32,7 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url = 'https://oss.sonatype.org/content/groups/public/' }
     }
 
     dependencies {
@@ -54,6 +54,8 @@ subprojects {
 
         withType(JavaCompile) {
             options.encoding = 'UTF-8'
+            // Set the release flag. This configures what version bytecode the compiler will emit, as well as what JDK APIs are usable.
+            // See https://openjdk.java.net/jeps/247 for more information.
             options.release.set(8)
         }
 
@@ -66,18 +68,8 @@ subprojects {
         }
     }
 
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                groupId = "com.github.max1mde.packetevents"
-                artifactId = project.name
-                version = project.version
-                from components.java
-            }
-        }
+    //So that SNAPSHOT is always the latest SNAPSHOT
+    configurations.all {
+        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
     }
-}
-
-configurations.all {
-    resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
 }
